Add to cart default by selected ride

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -168,6 +168,10 @@ button.link-btn i {
     border-top-right-radius: 10px;
 }
 
-.pay-btn:hover {
+.pay-btn-enable {
     cursor: pointer;
+}
+
+.pay-btn-enable:hover {
+    background: #e50019;
 }
