--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -220,11 +220,11 @@ input[type="submit"] {
 }
 
 .section-padding-bottom {
-    padding-bottom: 80px;
+    padding-bottom: 60px;
 }
 
 .section-padding-top {
-    padding-top: 80px;
+    padding-top: 70px;
     padding-bottom: 0;
     overflow: hidden;
 }
@@ -748,11 +748,15 @@ a.nav-link.offcanvas-btn:before {
 
 a.signup-btn,
 span.signup-btn {
-    background: #E50019;
     display: inline-block;
-    padding: 5px 12px !important;
-    border-radius: 10px;
-    color: #fff !important;
+    color: #000 !important;
+    font-weight: bold;
+}
+
+a.signup-btn:hover,
+span.signup-btn:hover {
+    /* color: #7d7979 !important; */
+    color: #E50019 !important;
 }
 
 .modal {
@@ -1056,7 +1060,7 @@ li#signInIdIcon {
     text-transform: capitalize;
     display: inline-block;
     padding-left: 0;
-    z-index: -1;
+    /* z-index: -1; */
 }
 
 .section-title-small-text h2 {
@@ -1865,8 +1869,15 @@ section.linked-area.section-padding.buy-ticket-overlay.magic-overlay.magic-pictu
     transition: all .3s linear;
 }
 
+.direction-content a>i {}
+
 .direction-content:hover.direction-content>a>svg {
     border: 4px solid #f9f9f9;
+    border-radius: 50%;
+}
+
+.direction-content a>i:hover {
+    border: 4px solid #ddd;
     border-radius: 50%;
 }
 
@@ -2015,10 +2026,10 @@ a.deals-shape-btn {
 .fanstasy-input-field {
     height: 60px;
     font-size: 16px;
-    text-transform: capitalize;
     color: #666;
     border-radius: 10px;
     padding-left: 24px;
+    background-color: #fff !important;
 }
 
 .submit-btn-field button {
@@ -3457,7 +3468,7 @@ button.remove-btn {
 }
 
 .popular-item-border {
-    border: 1px solid #FF0000;
+    border: 1px solid #c9c9c9b3;
 }
 
 .popular-item {
@@ -3520,6 +3531,7 @@ button.remove-btn {
 
 .thing-to-do-inner-content {
     padding: 25px 20px;
+    min-height: 280px;
 }
 
 .t-bottom-content {
@@ -4431,4 +4443,61 @@ button.atlantis-book-now-btn.btn {
 
 .Collapsible__contentInner {
     border: 1px solid rgba(0, 0, 0, 0.11);
+}
+
+.primary-btn {
+    background: #e50019 !important;
+    color: #fff !important;
+    padding: 7px 23px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    border: none;
+}
+
+.disable-btn {
+    background: #4E4E4E !important;
+    color: #fff !important;
+    padding: 7px 23px;
+    text-align: center;
+    cursor: not-allowed;
+    border-radius: 10px;
+    border: none;
+}
+
+.full-width {
+    width: 100% !important;
+}
+
+/* order summary */
+.order-summary-qtn {
+    display: flex;
+    justify-content: space-between;
+}
+
+button.order-qtn {
+    border: none;
+    background: transparent;
+    font-size: 20px;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+}
+
+button.order-qtn:focus {
+    outline: none;
+}
+
+input.order-qtn-number {
+    text-align: center;
+    border: none;
+}
+
+.order-qtn-number {
+    background: transparent;
+}
+
+.secondary-btn {
+    background: #000000 !important;
+    color: #fff;
 }
