--- a/src/components/App.css
+++ b/src/components/App.css
@@ -204,9 +204,9 @@ button.link-btn i {
 }
 
 /***********************Change for select room check availability adult select option***********************/
-.fantasy-feature-about-area,
-.select-park-option-area {
-    z-index: -1;
+.select-park-option-area,
+.fantasy-feature-about-area {
+    /* z-index: -1; */
 }
 
 .btn-disabled {
