--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -358,14 +358,14 @@ input[type="submit"] {
 ==========================================================================*/
 
 .logo>a {
-    margin-top: 18px;
     display: inline-block;
 }
 
 #main-menu li a {
-    color: #fff;
+    color: #3a3a3a;
     font-weight: 400;
     position: relative;
+    padding: 0;
 }
 
 nav.main-menu ul li a.active {
@@ -430,6 +430,45 @@ a.navbar-brand>img {
     color: #E50019;
 }
 
+.header-area {
+    padding: 0;
+    transition: all .3s linear;
+}
+
+ul#main-menu li {
+    color: #000000;
+    display: inline-block;
+    -webkit-transition: all .3s linear;
+    transition: 0.3s;
+    padding: 30px 14px;
+    font-size: 16px;
+    -webkit-transition: all .3s linear;
+    transition: all .3s linear;
+    text-transform: capitalize;
+    -webkit-font-smoothing: antialiased;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
+}
+
+ul#main-menu li:hover {
+    color: #E50019;
+}
+
+ul#main-menu li a:hover {
+    color: #E50019;
+}
+
+.header-area.sticky {
+    position: fixed;
+    z-index: 999999;
+    width: 100%;
+    top: 0;
+    animation: 1s fadeInDown;
+    background: #fff;
+    -webkit-box-shadow: 0 3px 6px rgba(171, 171, 171, .41);
+    box-shadow: 0 3px 6px rgba(171, 171, 171, .41);
+}
+
 
 /*================================================================
         Utilities
@@ -478,10 +517,6 @@ a.navbar-brand>img {
 
 
 /* Transparent Header */
-
-.rox-logo {
-    max-width: 172px;
-}
 
 .rox-header-transparent {
     position: absolute;
@@ -592,6 +627,10 @@ a.navbar-brand>img {
     .header-sticky.sticky .rox-header-menu .nav>.rox-dropdown:after {
         bottom: 10px;
     }
+
+    .logo {
+        max-width: 172px;
+    }
 }
 
 
@@ -696,13 +735,14 @@ li.megamenu>span {
 }
 
 .menu-menu-park-btn>a {
-    padding: 6px 20px;
+    padding: 6px 20px !important;
     font-size: 15px;
     margin-right: 20px;
+    color: #fff !important;
 }
 
 .menu-menu-park-btn>a:last-child {
-    margin-right: 0;
+    margin-right: 0 !important;
 }
 
 
@@ -906,17 +946,21 @@ a.nav-link.shopping-cart-btn {
 
 a.nav-link.shopping-cart-btn span {
     position: absolute;
-    top: 19px;
+    top: -13px;
     display: inline-block;
     height: 20px;
     font-size: 12px;
-    right: -3px;
+    right: -9px;
     width: 20px;
     border-radius: 50%;
     background: #EB7500;
     color: #fff;
     text-align: center;
     line-height: 20px;
+}
+
+.shopping-cart-btn {
+    position: relative !important;
 }
 
 a.nav-link.shopping-cart-btn i {
@@ -1451,6 +1495,10 @@ p.footer-text>a:hover {
     opacity: 1;
     visibility: visible;
     height: 84%;
+    border-radius: 30px;
+}
+
+.single-discover-carousel>a>img {
     border-radius: 30px;
 }
 
@@ -3156,9 +3204,11 @@ h4.ticket-modal-body-title {
     color: #3a3a3a;
     font-weight: 600;
 }
-.ReactModal__Overlay.ReactModal__Overlay--after-open{
+
+.ReactModal__Overlay.ReactModal__Overlay--after-open {
     z-index: 9999;
 }
+
 
 /* item added alert show */
 
@@ -3530,7 +3580,7 @@ button.remove-btn {
 
 .thing-to-do-inner-content {
     padding: 25px 20px;
-    min-height: 280px;
+    min-height: 200px;
 }
 
 .t-bottom-content {
@@ -3540,7 +3590,7 @@ button.remove-btn {
 }
 
 .thing-to-do-inner-content>p {
-    margin: 30px 0;
+    margin: 10px 0;
 }
 
 .t-tile {
@@ -3892,10 +3942,11 @@ ul.count-guest-list {
 /* atlantis breadcrumb */
 
 .atlantis-feature-img {
-    background: url("../images/atlantis/atlantis.png");
+    background: url("../images/atlantis/resort.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
+    height: 100vh;
 }
 
 
@@ -4295,7 +4346,9 @@ button.atlantis-book-now-btn.btn {
     }
 }
 
+
 /**************************Profile Style************************/
+
 .user-profile-inner-content {
     box-shadow: 0 3px 6pc rgba(0, 0, 0, .15);
     border-radius: 4px;
@@ -4469,7 +4522,9 @@ button.atlantis-book-now-btn.btn {
     width: 100% !important;
 }
 
+
 /* order summary */
+
 .order-summary-qtn {
     display: flex;
     justify-content: space-between;
@@ -4502,7 +4557,9 @@ input.order-qtn-number {
     color: #fff;
 }
 
+
 /* room booking */
+
 .ReactModal__Content.ReactModal__Content--after-open {
     box-shadow: 0 3px 5px rgba(56, 38, 38, 0.34);
     border-radius: 4px;
@@ -4573,7 +4630,6 @@ h5.modal-title.ticekt-modal-title {
     border-radius: 20px !important;
     /* padding: 30px 25px; */
     padding: 0 !important;
-
 }
 
 .ReactModal__Content--after-open {}
@@ -4593,3 +4649,8 @@ h5.modal-title.ticekt-modal-title {
 .prodcut-add-to-cart {
     text-align: center;
 }
+
+
+/*==================================================================
+    hamburger menu
+====================================================================*/
