--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2790,9 +2790,6 @@ span.project-gallery:hover img {
     width: calc(100% - 40px);
 }
 
-
-/* water kingdom breadcrum area */
-
 .water-feature-img {
     background: url("../images/waterkingdom.jpg");
     background-size: cover;
@@ -2810,6 +2807,57 @@ span.project-gallery:hover img {
     background: linear-gradient(45deg, rgba(94, 163, 222, 1) 0%, rgba(32, 124, 202, 1) 0%, rgba(41, 137, 216, 1) 50%, rgba(38, 200, 249, 1) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient(startColorstr='#5ea3de', endColorstr='#26c8f9', GradientType=1);
 }
+
+/* water kingdom breadcrum area */
+
+/*====================================================
+    heritage park page global
+======================================================*/
+
+.heritage-section-title h2::before {
+    content: "";
+    position: absolute;
+    left: -7px;
+    bottom: 0;
+    background: #E6B96D;
+    height: 25px;
+    z-index: -1;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: calc(100% - 67px);
+}
+
+.heritage-section-title-small-text h2:before {
+    content: "";
+    position: absolute;
+    left: -7px;
+    bottom: 0;
+    background: #E6B96D;
+    height: 20px;
+    z-index: -1;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: calc(100% - 40px);
+}
+
+
+.heritage-feature-img {
+    background: url("../images/waterkingdom.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.heritage-select-park-bg {
+    background: rgb(255, 234, 203);
+    background: linear-gradient(60deg, rgba(255, 234, 203, 1) 0%, rgba(255, 218, 99, 1) 91%);
+}
+
+/* heritage park breadcrum area */
+
+
 
 
 /*=========================================================================
